Fixed size of dropdown on smaller screen sizes

--- a/app/assets/stylesheets/page_bundles/merge_requests.scss
+++ b/app/assets/stylesheets/page_bundles/merge_requests.scss
@@ -756,8 +756,8 @@ $tabs-holder-z-index: 250;
 }
 
 .submit-review-dropdown {
-  .dropdown-menu {
-    width: 650px;
+  &.show .dropdown-menu {
+    width: calc(100vw - 20px);
     max-width: 650px;
 
     .gl-new-dropdown-inner {
